fix: aligned card margin

--- a/src/kirby/components/card/card.component.tns.scss
+++ b/src/kirby/components/card/card.component.tns.scss
@@ -1,24 +1,18 @@
 @import 'native-imports';
 
-@mixin elevation-margin($value) {
-    margin: $value * (3/2);
-}
-
 .background, 
 .container {
     display: flex;
     flex-direction: column;
 }
 
-.container {    
-    &.elevation-2 {
-        @include elevation-margin(2);
-    }
-
-    &.elevation-4 {
-        @include elevation-margin(4);
-    }
-
+.container {
+    // the max elevation for cards (when highlighted)
+    $max-elevation: 4; 
+    margin-left: size('xxs');
+    margin-right: size('xxs');
+    margin-top: $max-elevation * (3/2);
+    margin-bottom: $max-elevation * (3/2);
     border-radius: $border-radius;
     background-color: get-color('white');
 
